<resources>
    <string name="app_name">Texarkana College</string>
    <string name="some_permissions_are_required_to_do_the_task">Some permissions are required to do the task.</string>
    <string name="need_permissions">Need permission(s)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_not_granted">Permissions not granted</string>
    <string name="downloading">Downloading file…</string>
    <string name="app_client_id">541700732898-vc0jvlunp5g84brohnsq8nd4io50t2ht.apps.googleusercontent.com</string>
    <string name="assignment_deleted">Assignment Deleted</string>
    <string name="mark_as_not_done">Mark as not Done</string>
    <string name="there_was_an_error_check_connection">There was an error, check data connection</string>
    <string name="versionNumber">3.1.7</string>
    <string name="some_error_was_encountered">Some error was encountered</string>
    <string name="everything_is_already_loaded">Everything is already loaded</string>
    <string name="there_is_no_more_news">There\'s no more news</string>
    <string name="cant_load_more_while_searching">Can\'t load more while searching</string>
    <string name="press_submit_again_to_submit_comment">Press Submit again to submit the comment</string>
    <string name="press_like_again_to_like_the_post">Press like again to like the post</string>
    <string name="why_choose_tc">Why Choose TC</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="you_are_now_signed_out">You are now signed out</string>
    <string name="sign_in">Sign In</string>
    <string name="upload_progress">Upload Progress: %1$d%%</string>
    <string name="enable_colored_grade_text_view">Enable Colored Grade Text View</string>
    <string name="disable_colored_grade_text_view">Disable Colored Grade Text View</string>
    <string name="colored_text_based_on_grades">Colored text based on grades</string>
    <string name="disable_colored_icon">Disable Colored Icon</string>
    <string name="enable_colored_icon">Enable Colored Icon</string>
    <string name="icons_showing_the_letter_grade_for_that_item">Icons showing the letter grade for that item</string>
    <string name="colored_card_view">Colored Card View</string>
    <string name="colored_text_view">Colored Text View</string>
    <string name="neither">Neither</string>
    <string name="display_colored_items_based_on_class_average">Display colored items based on class average</string>
    <string name="icons_showing_the_first_letter_of_each_class">Icons showing the first letter of each class</string>
    <string name="class_settings">Class Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="would_you_like_to_delete_all_grades_for_this_class">Would you like to delete all grades for this class?</string>
    <string name="delete_all_title">Delete All?</string>
    <string name="delete_grade_title">Delete Grade?</string>
    <string name="would_you_like_to_delete_this_grade_it_can_not_be_undone">Would you like to delete this grade? It can not be undone.</string>
    <string name="delete_grade">Delete Grade</string>
    <string name="restore">Restore</string>
    <string name="would_you_like_to_overwrite_everything">Would you like to overwrite everything?</string>
    <string name="don_t_overwrite">Don\'t Overwrite</string>
    <string name="overwrite">Overwrite</string>
    <string name="backup_restored_successfully">Backup Restored Successfully</string>
    <string name="page_number">Page Number</string>
    <string name="search_campus_news">Search campus news</string>
    <string name="delete_class">Delete Class</string>
    <string name="would_you_like_to_delete_this_class_it_will_delete_the_class_grades_and_all_assignments_associated_with_it">Would you like to delete this class? It will delete the class, grades, and all assignments associated with it.</string>
    <string name="delete_class_title">Delete Class?</string>
    <string name="delete_all_classes_title">Delete All Classes?</string>
    <string name="would_you_like_to_delete_all_classes_this_will_delete_all_classes_grades_and_assignments">Would you like to delete all classes? This will delete all classes, grades and assignments.</string>
    <string name="there_are_no_classes_stored">There are no classes stored</string>
    <string name="build_number">46</string>
    <string name="build_number_heading">Build Number:</string>
    <string name="date_updated">09/04/2023</string>
    <string name="view_image">View Image</string>
    <string name="error_selecting_image">Error selecting image</string>
    <string name="some_permissions_are_required_for_certain_functionality_in_the_app_to_work">Some permissions are required for certain functionality in the app to work</string>
    <string name="there_are_no_upcoming_assignments">There are no upcoming assignments</string>
    <string name="there_are_no_past_due_assignments">There are no past due assignments</string>
    <string name="there_are_no_finished_assignments">There are no finished assignments</string>
    <string name="appearance">Appearance</string>
    <string name="customize_the_appearance_of_the_app">Customize the appearance of the app</string>
    <string name="this_is_a_web_class">This is a web class</string>
    <string name="grades">Grades</string>
    <string name="there_are_currently_no_grades_stored_for_this_class_hit_the_if_you_would_like_to_add_some">There are currently no grades stored for this class. Hit the + if you would like to add some.</string>
    <string name="notes">Notes…</string>
    <string name="select_class">Select Class</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="class_name">Class Name</string>
    <string name="add_class">Add Class</string>
    <string name="add_class_heading">Add Class</string>
    <string name="add_image">Add Image</string>
    <string name="add_grade">Add Grade</string>
    <string name="grade_weight_e_g_50">Grade Weight (e.g. 50)</string>
    <string name="grade_name_e_g_exam_1">Grade Name (e.g. Exam 1)</string>
    <string name="grade_e_g_95">Grade (e.g. 95)</string>
    <string name="add_post">Add Post</string>
    <string name="this_is_a_pinned_post">This is a pinned post</string>
    <string name="mark_post_as_urgent">Mark post as urgent</string>
    <string name="hide_this_post_dev_use_only">Hide this post (DEV USE ONLY)</string>
    <string name="post_content">Post Content</string>
    <string name="post_title">Post Title</string>
    <string name="options">Options</string>
    <string name="edit">Edit</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="delete">Delete</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_what_you_would_like_to_do">Choose what you would like to do.</string>
    <string name="choose">Choose</string>
    <string name="delete_app_data">Delete App Data</string>
    <string name="fetching_news">Fetching News…</string>
    <string name="likes">Likes</string>
    <string name="fetching_all_news">Fetching All News…</string>
    <string name="uploading_image">Uploading Image…</string>
    <string name="delete_post_heading">Delete Post?</string>
    <string name="would_you_like_to_delete_this_post_it_can_not_be_undone">Would you like to delete this post? It can not be undone.</string>
    <string name="delete_post">Delete Post</string>
    <string name="banned_warning">Sorry, you have been banned</string>
</resources>