<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_attach_file_24"
        app:tint="?attr/alwaysDarkTextColor" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/iconImageView"
        android:text="@string/need_permissions"
        android:textColor="?attr/alwaysDarkTextColor"
        android:textAlignment="center"
        style="@style/TextAppearance.Material3.HeadlineSmall"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/headline"
        android:text="@string/some_permissions_are_required_for_certain_functionality_in_the_app_to_work"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?attr/alwaysDarkTextColor"
        />

    <Button
        android:id="@+id/needPermissionsDialogOKButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cancelNeedPermissionsDialog"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:text="@string/ok"
        app:tint="?attr/cancelButtonTextColor"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/cancelNeedPermissionsDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/needPermissionsDialogOKButton"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:text="@string/cancel"
        android:textColor="?attr/cancelButtonTextColor"
        android:layout_marginEnd="15dp"
        style="@style/Widget.Material3.Button.OutlinedButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>