<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ClassSettingsFragment"
    android:background="?attr/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/classSettingsAppBar"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/transparent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/toolBarScrimColor"
            app:expandedTitleMarginBottom="28dp"
            app:titleCollapseMode="scale"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarClassSettings"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/class_settings"
                app:navigationIconTint="?attr/backArrowColor"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="always"
        android:paddingBottom="25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/coloredIconsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/icons_showing_the_first_letter_of_each_class"
                android:textColor="?attr/textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSetColoredIcons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/coloredIconsTextView"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/cardViewLightBlue"
                app:cardCornerRadius="28dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp">

                    <RadioButton
                        android:id="@+id/enableColoredIcons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:minHeight="48dp"
                        android:text="@string/enable_colored_icon"
                        android:textColor="?attr/alwaysDarkTextColor"
                        android:textSize="12sp"
                        android:theme="@style/RadioButton" />

                    <RadioButton
                        android:id="@+id/disableColoredIcons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:minHeight="48dp"
                        android:text="@string/disable_colored_icon"
                        android:textColor="?attr/alwaysDarkTextColor"
                        android:textSize="12sp"
                        android:theme="@style/RadioButton" />

                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/coloredTextTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewSetColoredIcons"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/display_colored_items_based_on_class_average"
                android:textColor="?attr/textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewToggleColoredTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/coloredTextTextView"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/cardViewLightBlue"
                app:cardCornerRadius="28dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp">

                    <RadioButton
                        android:id="@+id/coloredTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:minHeight="48dp"
                        android:text="@string/colored_text_view"
                        android:textColor="?attr/alwaysDarkTextColor"
                        android:textSize="12sp"
                        android:theme="@style/RadioButton" />

                    <RadioButton
                        android:id="@+id/coloredCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:minHeight="48dp"
                        android:text="@string/colored_card_view"
                        android:textColor="?attr/alwaysDarkTextColor"
                        android:textSize="12sp"
                        android:theme="@style/RadioButton" />

                    <RadioButton
                        android:id="@+id/noColoredItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:minHeight="48dp"
                        android:text="@string/neither"
                        android:textColor="?attr/alwaysDarkTextColor"
                        android:textSize="12sp"
                        android:theme="@style/RadioButton" />

                </RadioGroup>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>